--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"axios": "^1.7.9",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.0.6",
-		"joi": "^17.13.3",
 		"lucide-react": "^0.474.0",
 		"next": "15.2.5",
 		"react": "^19.0.0",
@@ -23,7 +22,8 @@
 		"react-hook-form": "^7.54.2",
 		"resend": "^4.1.2",
 		"sonner": "^1.7.4",
-		"typewriter-effect": "^2.21.0"
+		"typewriter-effect": "^2.21.0",
+		"zod": "^3.25.46"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
