--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-hook-form": "^7.54.2",
 		"resend": "^4.1.2",
 		"sonner": "^1.7.4",
+		"yet-another-react-lightbox": "^3.23.3",
 		"zod": "^3.25.46"
 	},
 	"devDependencies": {
