--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^1.7.9",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.474.0",
+		"motion": "^12.23.6",
 		"next": "15.2.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
