--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.2",
+		"@lottiefiles/dotlottie-react": "^0.16.1",
 		"@tanstack/react-query": "^5.66.0",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.8.1",
 		"axios": "^1.7.9",
 		"clsx": "^2.1.1",
+		"gsap": "^3.13.0",
 		"lucide-react": "^0.474.0",
 		"motion": "^12.23.6",
 		"next": "15.2.5",
+		"ogl": "^1.0.11",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
