--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
 		"@tanstack/react-query": "^5.66.0",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.8.1",
+		"@types/three": "^0.181.0",
 		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"gsap": "^3.13.0",
-		"lucide-react": "^0.474.0",
-		"motion": "^12.23.6",
+		"lucide-react": "^0.554.0",
+		"motion": "^12.23.24",
 		"next": "15.2.5",
+		"nextjs-simple-typewriter": "^5.2.2",
 		"ogl": "^1.0.11",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"resend": "^4.1.2",
 		"sonner": "^1.7.4",
+		"three": "^0.181.2",
 		"yet-another-react-lightbox": "^3.23.3",
 		"zod": "^3.25.46"
 	},
