--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
 		"@lottiefiles/dotlottie-react": "^0.16.1",
+		"@radix-ui/react-dialog": "^1.1.15",
 		"@tanstack/react-query": "^5.66.0",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.8.1",
