--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"motion": "^12.23.24",
 		"next": "15.2.5",
 		"nextjs-simple-typewriter": "^5.2.2",
+		"ogl": "^1.0.11",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
