--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"react-icon-cloud": "^4.1.7",
 		"resend": "^4.1.2",
 		"sonner": "^1.7.4",
 		"yet-another-react-lightbox": "^3.23.3",
