--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-hook-form": "^7.54.2",
 		"react-icon-cloud": "^4.1.7",
 		"resend": "^4.1.2",
+		"simple-icons": "^15.22.0",
 		"sonner": "^1.7.4",
 		"yet-another-react-lightbox": "^3.23.3",
 		"zod": "^3.25.46"
