--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@lottiefiles/dotlottie-react": "^0.16.1",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@tanstack/react-query": "^5.66.0",
+		"@types/node-telegram-bot-api": "^0.64.13",
+		"@types/validator": "^13.15.10",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -19,14 +21,15 @@
 		"motion": "^12.23.24",
 		"next": "15.2.5",
 		"nextjs-simple-typewriter": "^5.2.2",
+		"node-telegram-bot-api": "^0.66.0",
 		"ogl": "^1.0.11",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-icon-cloud": "^4.1.7",
-		"resend": "^4.1.2",
 		"simple-icons": "^15.22.0",
 		"sonner": "^1.7.4",
+		"validator": "^13.15.23",
 		"yet-another-react-lightbox": "^3.23.3",
 		"zod": "^3.25.46"
 	},
